--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>wave-state-project</title>
+    <meta name="theme-color" content="#0a0e17" />
+    <title>Wave State — Living Album</title>
   </head>
   <body>
     <div id="root"></div>
